lang.java.statics.test/tests/positive/packages/single-type-import-from-nested-package.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    import q.r.B;
    public class A {
        public B b;
    }

}

[q] {
    [r] {

        [B]
        package q.r;
        public class B {}

        [C]
        package q.r;
        public class C {}

    }
}
