lang.java.statics.test/tests/negative/packages/classes-with-same-name-in-nested-package.no.javtest
STATIX fail java\.duplicates\.no-duplicate-type.*\"A\"
JAVAC  fail duplicate class\: p\.q\.A

[p] {
    [q] {

        [A]
        package p.q;
        public class A {}

        [A]
        package p.q;
        public class A {}

    }
}
